fix ImagePopup description and white space around page element

--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,5 @@
 .page {
   box-sizing: border-box;
-  max-width: 1280px;
   min-width: 320px;
   width: 100%;
   margin: 0 auto;
