--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -3,9 +3,11 @@
   grid-template-columns: 150px 310px 30px 5px auto;
   grid-template-rows: minmax(70px, min-content) minmax(50px, min-content);
   grid-template-areas:
-  "avatar name name . add"
-  "avatar description description . add";
+    'avatar name name . add'
+    'avatar description description . add';
   width: 100%;
+  margin: auto;
+  max-width: 880px;
   padding: 37px 0 52px;
 }
 
@@ -17,10 +19,10 @@
     grid-template-columns: 1fr min-content;
     grid-template-rows: 130px 50px 30px 30px 50px;
     grid-template-areas:
-    "avatar avatar"
-    "name name"
-    "description description"
-    ". ."
-    "add add";
+      'avatar avatar'
+      'name name'
+      'description description'
+      '. .'
+      'add add';
   }
 }
